--- a/main_entrance.html
+++ b/main_entrance.html
@@ -22,6 +22,9 @@
             <img id="entance" src="/assets/360 img/ENTRANCE.jpg">
             <img id="entrance-logo" src="/assets/icon/ENTRANCE.png">
             <img id="entrance-left" src="/assets/icon/ENTRANCE-LEFT.png">
+            <img id="entrance-1" src="/assets/360 img/ENTRANCE-1.jpg">
+            
+
         </a-assets>
         <a-entity id="camera" camera mouse-cursor look-controls>
             <a-cursor fuse="true" color="white"></a-cursor>
