--- a/entrance.html
+++ b/entrance.html
@@ -17,16 +17,20 @@
 
             <img id="entrance-center" src="/assets/360 img/ENTRANCE-CENTER.jpg">
             <img id="entrance-in" src="/assets/icon/ENTRANCE-IN.png">
-            <img id="entrance-1" src="/assets/icon/ENTRANCE-1.png">
+            <img id="left-exit" src="/assets/icon/ENTRANCE-LEFT.png">
+            <img id="entrance-out" src="/assets/icon/ENTERANCE-OUT-1.png">
+            <img id="entrance-1" src="/assets/360 img/ENTRANCE-1.png">
             
         </a-assets>
         <a-entity id="camera" camera mouse-cursor look-controls>
             <a-cursor fuse="true" color="white"></a-cursor>
         </a-entity>
         <a-sky id="image-360" src="#entrance-center">
-            <a-entity id="main-entance" geometry="height: 6; width: 6" material="src:#entrance-in; transparent: true; emissiveIntensity: 0" position="-22.56684 4.37306 15.65157" rotation="0.207410721837358 -44.41592000000001 -0.02349126960036375" scale="1 1 -0.001" cursor-listener="" link="href: main_entrance.html"></a-entity>
-            <a-entity id="main" geometry="height: 6; width: 6" material="src:#entrance-main; transparent: true; emissiveIntensity: 0" position="29.47387 4.57687 1.17468" rotation="0 81 0" scale="1 1 0.94" cursor-listener="" link="href: main_entrance.html"></a-entity>
-        </a-sky>
+            <a-entity id="main-entance" geometry="height: 6; width: 6" material="src:#entrance-in; transparent: true; emissiveIntensity: 0" position="-22.56684 4.37306 15.65157" rotation="0.207410721837358 -44.41592000000001 -0.02349126960036375" scale="1 1 -0.001" cursor-listener="" ></a-entity>
+            <a-entity id="left-exit" geometry="height: 6; width: 6" material="src:#left-exit; transparent: true; emissiveIntensity: 0" position="6.19733 5.38081 -35.39186" rotation="0.207410721837358 -44.41592000000001 -0.02349126960036375" scale="1 1 -0.001" cursor-listener="" link="href: left_entrance.html"></a-entity>
+
+            <a-entity id="entrance-out" geometry="height: 6; width: 6" material="src:#entrance-out; transparent: true; emissiveIntensity: 0" position="9.92972 2.51209 -2.44695" rotation="0.01741 -53.71592 -0.02349126960036375" scale="1 1 -0.001" cursor-listener="" link="href: entrance-2.html"></a-entity>
+           </a-sky>
     </a-scene>
 </body>
 
