--- a/left_entrance.html
+++ b/left_entrance.html
@@ -16,6 +16,7 @@
         <a-assets>
 
             <img id="entance-left" src="/assets/360 img/ENTRANCE-LEFT.jpg">
+            <img id="exit" src="/assets/icon/LEFT-EXIT.png">
     
             <img id="left-exit" src="/assets/icon/ENTRANCE-LEFT-EXIT.png">
             <img id="entrance-center" src="/assets/360 img/ENTRANCE-CENTER.jpg">
@@ -25,6 +26,7 @@
         </a-entity>
         <a-sky id="image-360" src="#entance-left">
             <a-entity id="main-entance" geometry="height: 6; width: 6" material="src: #left-exit; transparent: true; emissiveIntensity: 0" position="7.8831 4.26094 27.83532" rotation="0.207410721837358 17.69408262923008 -0.02349126960036375" scale="1 1 0.94" cursor-listener="" link="href: entrance.html"></a-entity>
+            <a-entity id="main-entance" geometry="height: 6; width: 6" material="src:#exit; transparent: true; emissiveIntensity: 0" position="28.28092 4.36235 2.24792" rotation="-2.16259 -90 171.14" scale="-1.16 -1.17 -0.17" cursor-listener="" background="" link="href: main_entrance.html"></a-entity>
              </a-sky>
     </a-scene>
 </body>
