--- a/entrance-2.html
+++ b/entrance-2.html
@@ -27,10 +27,15 @@
             <a-cursor fuse="true" color="white"></a-cursor>
         </a-entity>
         <a-sky id="image-360" src="#entrance-1">
-            <a-entity id="entrance-in" geometry="height: 6; width: 6" material="src:#entrance-in; transparent: true; emissiveIntensity: 0" position="-9.45564 2.07941 6.33253" rotation="0.207410721837358 -51.82 -0.02349126960036375" scale="1 1 0.94" cursor-listener="" link="href: entrance.html"></a-entity> 
-            <a-entity id="exit" geometry="height: 6; width: 6" material="src:#exit; transparent: true; emissiveIntensity: 0" position="15.7134 0.59227 -16.11103" rotation="0.207410721837358 -51.82 -0.02349126960036375" scale="1 1 0.94" cursor-listener="" link="href: main_entrance.html"></a-entity>
+            <a-text font="aileronsemibold" value="Entrance" width="6" position="-3.05637 0.62386 2.37734" scale="1 1 0.94" rotation="-1.93 -54.02 -0.51" text="align: center; color: #ffffff; side: back" visible=""></a-text>
+            <a-text font="aileronsemibold" value="Main-Entrance-Exit" width="6" position="2.69948 0.65198 -3.06196" scale="-0.71 0.73 -6.55" rotation="-1.9100000000000001 -55.51 -0.51" text="align: center; color: #ffffff; side: back" visible=""></a-text>
+            
+            <a-entity id="entrance-in" geometry="height: 6; width: 6" material="src:#entrance-in; transparent: true; emissiveIntensity: 0" position="-23.92313 0.556 17.9035" rotation="0.207410721837358 -64.6 -0.02349126960036375" scale="1 1 0.94" cursor-listener="" link="href: entrance.html"></a-entity>
+            <a-entity id="exit" geometry="height: 6; width: 6" material="src: #exit; transparent: true; emissiveIntensity: 0" position="22.25924 0.72218 -23.979" rotation="0.207410721837358 -51.82 -0.02349126960036375" scale="1 1 0.94" cursor-listener="" link="href: main_entrance.html"></a-entity>
               </a-sky>
+              
     </a-scene>
+
 </body>
 
 </html>
